
option java_outer_classname="CloseStreamCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message CloseStreamCommand 
{
	optional string key = 1;
	optional string lockHandle = 2;
	optional int64 requestId = 3;
}